fix(06-05): fix checkbox alignment in permission matrix
Replace positional td:first-child/nth-child(2) selectors with
.tab-name/.permission-type class selectors. The rowspan="2" on
tab-name cells causes nth-child(2) to target the first checkbox
cell in Edit rows instead of the Permission label cell.

--- a/styles/views.css
+++ b/styles/views.css
@@ -1110,8 +1110,8 @@
     text-align: left;
 }
 
-.permission-matrix td:first-child,
-.permission-matrix td:nth-child(2) {
+.permission-matrix td.tab-name,
+.permission-matrix td.permission-type {
     text-align: left;
 }
 
